maud/tests/warnings/keyword_names_without_@.stderr
error: found keyword `if`
 --> $DIR/keyword_names_without_@.rs:7:9
  |
7 |         if {}
  |         ^^
  |
  = help: should this be a `@if`?
