maud/tests/warnings/keyword_names_without_@.rs
extern crate maud_macros;

use maud_macros::html;

fn main() {
    html! {
        if {}
    };
}
